# MED-core-recipes

./: .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
docs/: _config.yml  _toc.yml  intro.md
docs/atmosphere/: atmosphere.md  recipes
docs/coupled/: coupled.md  recipes
docs/docs/: docs.md
docs/ice/: ice.md  recipes
docs/land/: land.md  recipes
docs/ocean/: ocean.md  recipes
esmvalcore/: config-developer.yml
esmvalcore/cmor/_fixes/access_esm/: access_esm15.py
esmvalcore/config/extra_facets/: access-esm_mappings.yml
recipes/ocean/: Transport_through_straits.ipynb  Zonally_Averaged_Wind_Stress.ipynb  Zonally_Averaged_Wind_Stress_map.ipynb  averaged_meridional_overturning_circulation.ipynb  barotropic_streamfunction.ipynb  comparing_model_resolution.ipynb  kinetic_energy_decomposition.ipynb
tests/integration/cmor/_fixes/access-esm1-5/: test_access-esm1-5.py
