[build-system]
requires = ["flit_core >=3.5,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ACCESS-MED"
authors = [{name = "Romain Beucher", email = "romain.beucher@anu.edu.au"}]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]
keywords = [
    "climate",
    "science",
    "model evaluation",
    "diagnostics",
    "notebook",
]
dynamic = ["description", "version"]
requires-python = ">=3.7"
dependencies = [
    "click>=7.1,<9",
    "docutils>=0.15,<0.18",
    "Jinja2",
    "jsonschema<4",
    "linkify-it-py~=1.0.1",
    "myst-nb~=0.13.1",
    "pyyaml",
    "jupyterbook",
    "sphinx>=4,<5",
    "sphinx-comments",
    "sphinx-copybutton",
    "sphinx-external-toc~=0.2.3",
    "sphinx-jupyterbook-latex~=0.4.6",
    "sphinx-design~=0.1.0",
    "sphinx-thebe~=0.1.1",
    "sphinx_book_theme~=0.3.2",
    "sphinx_togglebutton",
    "sphinxcontrib-bibtex>=2.2.0,<=2.5.0",
    "sphinx-multitoc-numbering~=0.1.3",
]

[project.license]
file = "LICENSE"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = ""
Documentation = ""
Funding = ""
Source = "https://github.com/ACCESS-NRI/ACCESS-MED"
Tracker = "https://github.com/ACCESS-NRI/ACCESS-MED/issues"

[project.optional-dependencies]
code_style = ["pre-commit~=2.12"]
pdfhtml = ["pyppeteer"]
sphinx = [
    "altair",
    "bokeh",
    "folium",
    "ipywidgets",
    "jupytext",
    "matplotlib",
    "nbclient",
    "numpy",
    "pandas",
    "plotly",
    "sphinx-click",
    "sphinx-examples",
    "sphinx_inline_tabs",
    "sphinx-proof",
    "sphinxext-rediraffe~=0.2.3",
    "sympy",
]
testing = [
    "altair",
    "beautifulsoup4",
    "beautifulsoup4",
    "cookiecutter",
    "coverage",
    "jupytext",
    "matplotlib",
    "pyppeteer",
    "pytest>=6.2.4",
    "pytest-cov",
    "pytest-regressions",
    "pytest-timeout",
    "pytest-xdist",
    "sphinx_click",
    "sphinx_tabs",
    "texsoup",
]

